--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link href="./css/style.css" rel="stylesheet" type="text/css">
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/147ebf4ae9.js" crossorigin="anonymous"></script>
-        <title>Gamesmart - Linktree</title>
+        <title>DEC - Linktree</title>
     </head>
     <body>
         <div class="container">
