Modification of hastag size in mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             
             <div class="row mt-4 justify-content-center">
-                <div class="col-12 col-md-1 p-3 text-center">
+                <div class="col-4 col-md-1 p-3 text-center">
                     <a href="https://www.facebook.com/Gamesmart" target="_blank"><i class="fa-brands fa-facebook fa-2xl p-3" style="color: #ffffff;"></i></a>
                 </div>
                 <div class="col-12 col-md-1 p-3 text-center">
@@ -134,14 +134,16 @@
                               <textarea class="form-control" id="textarea"> </textarea>
                                 
                             </div>
+                            <!--
                             <div class="mb-3 form-check">
                               <input type="checkbox" class="form-check-input" id="check">
                               <label class="form-check-label" for="check">Suscribete!</label>
                             </div>
+                            -->
                         </form>
                     </div>
                     <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enviar</button>
+                    <button type="button" class="btn btn-primary" style="background-color: #815AA4 !important;">Enviar</button>
                     </div>
                 </div>
                 </div>
