--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form target="_blank" action="https://formsubmit.co/hola.gamesmart@gmail.com" method="POST">
+                        <form target="_blank" action="https://formsubmit.co/david.escobar.castillejos@gmail.com" method="POST">
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Nombre</label>
                                 <input type="text" class="form-control" placeholder="Nombre completo..." id="exampleInputPassword1" name="name" required>
