--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             </div>
                             -->
                             <div class="modal-footer">
-                                <button type="submit button" class="btn btn-primary btn-block" style="background-color: #815AA4 !important;" onClick="window.location.reload();">Enviar</button>
+                                <button type="submit button" class="btn btn-primary btn-block" style="background-color: #815AA4 !important;">Enviar</button>
                             </div>
                         </form>
                     </div>
