--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
              
             <div class="row mt-5 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
-                    <a href="https://www.gamesmart.mx/" type="button" class="btn btn-lg custom-button">Página Web</a>
+                    <a href="https://www.gamesmart.mx/" type="button" class="btn btn-lg custom-button" target="_blank">Página Web</a>
                 </div>
             </div>
             <div class="row mt-3 justify-content-center">
@@ -102,8 +102,8 @@
                         </p> 
                         <h5>Teléfonos:</h5>
                         <p>
-                            Tienda: <a href=“tel:+525555634501”>55 5563 4501</a></br>
-                            Oficina: <a href=“tel:+525555634500”>55 5563 4500</a></br>
+                            Tienda: <a href="tel:+525555634501">55 5563 4501</a></br>
+                            Oficina: <a href="tel:+525555634500">55 5563 4500</a></br>
                         </p>         
                     </div>
                 </div>
