--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
                     <div class="modal-body">
                         <h5>Dirección:</h5>
                         <p>
-                            Av. Insurgentes Sur 1391 </br>
-                            Local, P109</br>
-                            Insurgentes Mixcoac</br>
-                            C.P. 03920</br>
-                            Ciudad de México
+                            <a href="https://goo.gl/maps/R3eExPmDRE8xYKMb6" target="_blank" class="href" style="text-decoration: none !important;">
+                                Av. Insurgentes Sur 1391 </br>
+                                Local, P109</br>
+                                Insurgentes Mixcoac</br>
+                                C.P. 03920</br>
+                                Ciudad de México
+                            </a>
                         </p> 
                         <h5>Teléfonos:</h5>
                         <p>
