--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="row mt-4 justify-content-center mt-5 mb-4">
-                <div class="col-12 col-md-1 text-center font-color">
+                <div class="col-4 col-md-1 text-center font-color">
                     <img class="img-fluid" src="./img/hashtag.png" alt="hashtag">
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <div class="modal-body">
                         <h5>Dirección:</h5>
                         <p>
-                            <a href="https://goo.gl/maps/R3eExPmDRE8xYKMb6" target="_blank" class="href" style="text-decoration: none !important;">
+                            <a href="https://goo.gl/maps/R3eExPmDRE8xYKMb6" target="_blank" class="href" style="text-decoration: none !important; color: #815AA4 !important;">
                                 Av. Insurgentes Sur 1391 </br>
                                 Local, P109</br>
                                 Insurgentes Mixcoac</br>
@@ -104,8 +104,8 @@
                         </p> 
                         <h5>Teléfonos:</h5>
                         <p>
-                            Tienda: <a href="tel:+525555634501">55 5563 4501</a></br>
-                            Oficina: <a href="tel:+525555634500">55 5563 4500</a></br>
+                            Tienda: <a href="tel:+525555634501" style="color: #815AA4 !important;">55 5563 4501</a></br>
+                            Oficina: <a href="tel:+525555634500" style="color: #815AA4 !important;">55 5563 4500</a></br>
                         </p>         
                     </div>
                 </div>
