--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
             </div>
             <div class="row mt-3 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
+                    <button type="button" class="btn btn-lg custom-button" data-bs-toggle="modal" data-bs-target="#distri">Distribuidores exclusivos</button>
+                </div>
+            </div>
+            <div class="row mt-3 justify-content-center">
+                <div class="col-12 col-md-4 text-center">
                     <button type="button" class="btn btn-lg custom-button" data-bs-toggle="modal" data-bs-target="#form">Contacto</button>
                 </div>
             </div>
 
             <div class="row mt-4 justify-content-center mt-5 mb-4">
-                <div class="col-4 col-md-1 text-center font-color">
+                <div class="col-4 col-md-1 text-center">
                     <img class="img-fluid" src="./img/hashtag.png" alt="hashtag">
                 </div>
             </div>
@@ -107,6 +112,30 @@
                             Tienda: <a href="tel:+525555634501" style="color: #815AA4 !important;">55 5563 4501</a></br>
                             Oficina: <a href="tel:+525555634500" style="color: #815AA4 !important;">55 5563 4500</a></br>
                         </p>         
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <!-- Modal Distri -->
+            <div class="modal fade" id="distri" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h4 class="modal-title" id="staticBackdropLabel">Distribuidores exclusivos</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row mt-4 justify-content-center mt-2 mb-4">
+                            <div class="col-4 col-md-4 text-center">
+                                <a href = "mailto: abc@example.com"><img class="img-fluid" src="https://www.games-workshop.com/resources/static/header-2017/gw-logo-default-stacked.svg" alt="gamesworkshop"></a>
+                            </div>
+                        </div>
+                        <div class="row mt-4 justify-content-center mt-5 mb-4">
+                            <div class="col-4 col-md-4 text-center">
+                                <a href = "mailto: abc@example.com"><img class="img-fluid" src="https://corporate.asmodee.com/smd-content/themes/asmodee/img/logo_asmodee.png" alt="asmodee"></a>
+                            </div>
+                        </div>  
                     </div>
                 </div>
                 </div>
