--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
                 <div class="col-12 col-md-1 p-3 text-center">
                     <a href="https://twitter.com/Gamesmart_mx" target="_blank"><i class="fa-brands fa-twitter fa-2xl p-3" style="color: #ffffff;"></i></a>
                 </div>
-                <!--
                 <div class="col-12 col-md-1 p-3 text-center">
-                    <a href="https://wa.me/#" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl p-3" style="color: #ffffff;"></i></a>
+                    <a href="https://wa.me/5215610817089" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl p-3" style="color: #ffffff;"></i></a>
                 </div>
-                -->
             </div>
              
             <div class="row mt-5 justify-content-center">
@@ -73,14 +71,21 @@
             </div>
             <div class="row mt-3 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
+                    <button type="button" class="btn btn-lg custom-button" data-bs-toggle="modal" data-bs-target="#distrio">Distribuidores oficiales</button>
+                </div>
+            </div>
+            <div class="row mt-3 justify-content-center">
+                <div class="col-12 col-md-4 text-center">
                     <button type="button" class="btn btn-lg custom-button" data-bs-toggle="modal" data-bs-target="#distri">Distribuidores exclusivos</button>
                 </div>
             </div>
+            <!--
             <div class="row mt-3 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
                     <button type="button" class="btn btn-lg custom-button" data-bs-toggle="modal" data-bs-target="#form">Contacto</button>
                 </div>
             </div>
+            -->
 
             <div class="row mt-4 justify-content-center mt-5 mb-4">
                 <div class="col-4 col-md-1 text-center">
@@ -116,7 +121,24 @@
                 </div>
                 </div>
             </div>
-
+            <!-- Modal Distri -->
+            <div class="modal fade" id="distrio" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h4 class="modal-title" id="staticBackdropLabel">Distribuidores oficiales</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row mt-4 justify-content-center mt-2 mb-4">
+                            <div class="col-4 col-md-4 text-center">
+                                <img class="img-fluid" src="https://corporate.asmodee.com/smd-content/themes/asmodee/img/logo_asmodee.png" alt="asmodee">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
             <!-- Modal Distri -->
             <div class="modal fade" id="distri" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable">
@@ -126,14 +148,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="row mt-4 justify-content-center mt-2 mb-4">
+                        <div class="row mt-4 justify-content-center mt-2 mb-4"> <!-- mt-5 -->
                             <div class="col-4 col-md-4 text-center">
-                                <a href = "mailto: abc@example.com"><img class="img-fluid" src="https://www.games-workshop.com/resources/static/header-2017/gw-logo-default-stacked.svg" alt="gamesworkshop"></a>
-                            </div>
-                        </div>
-                        <div class="row mt-4 justify-content-center mt-5 mb-4">
-                            <div class="col-4 col-md-4 text-center">
-                                <a href = "mailto: abc@example.com"><img class="img-fluid" src="https://corporate.asmodee.com/smd-content/themes/asmodee/img/logo_asmodee.png" alt="asmodee"></a>
+                                <img class="img-fluid" src="https://www.games-workshop.com/resources/static/header-2017/gw-logo-default-stacked.svg" alt="gamesworkshop">
                             </div>
                         </div>  
                     </div>
