--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     </head>
     <body>
         <!-- container is with margins and container-fluid is full screen -->
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row justify-content-center">
                 <!-- col-x is for mobile and col-md-x is for ipad col-xl-x is for desktop -->
-                <div class="col-12 col-md-6 text-center font-color">
-                    <!-- <img class="profile-pic" src="./img/profile_pic.png" alt="profile_pic">
-                    <h2 class="p-2">Gamesmart</h2> -->
-                    <br/><br/><br/><br/><br/><br/><br/>
+                <div class="col-12 col-md-12 text-center font-color">
+                    <img class="img-fluid" src="./img/profile_pic_gs.png" alt="profile_pic">
+                    <!-- <h2 class="p-2">Gamesmart</h2> -->
+                    <!-- <br/><br/><br/><br/><br/><br/><br/> -->
                 </div>
             </div>
 
             <div class="row mt-1 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
-                   <!-- <img class="img-fluid" src="./img/slogan.png" alt="slogan"> -->
+                   <img class="img-fluid" src="./img/slogan.png" alt="slogan">
                 </div>
             </div>
             
@@ -90,7 +90,7 @@
 
             <div class="row mt-4 justify-content-center mt-5 mb-4">
                 <div class="col-4 col-md-1 text-center">
-                    <!--<img class="img-fluid" src="./img/hashtag.png" alt="hashtag"> -->
+                    <img class="img-fluid" src="./img/hashtag.png" alt="hashtag">
 
                 </div>
             </div>
