--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <!-- container is with margins and container-fluid is full screen -->
-        <div class="container mt-2">
+        <div class="container mt-2 mb-0">
             <div class="row justify-content-center">
                 <!-- col-x is for mobile and col-md-x is for ipad col-xl-x is for desktop -->
                 <div class="col-12 col-md-12 text-center font-color">
@@ -36,13 +36,13 @@
                 </div>
             </div>
 
-            <div class="row mt-1 justify-content-center">
+            <div class="row mt-0 justify-content-center">
                 <div class="col-12 col-md-4 text-center">
                    <img class="img-fluid" src="./img/slogan.png" alt="slogan">
                 </div>
             </div>
             
-            <div class="row mt-4 justify-content-center">
+            <div class="row mt-0 justify-content-center">
                 <div class="col-4 col-md-1 p-3 text-center">
                     <a href="https://www.facebook.com/Gamesmart" target="_blank"><i class="fa-brands fa-facebook fa-2xl p-3" style="color: #ffffff;"></i></a>
                 </div>
